[startup] diagnostics: mention that DevKit plugin must be enabled if IllegalAccessError is thrown during startup
This seems to be the first place in code which accesses internal JDK classes. If IllegalAccessError is thrown, most probably it indicates that the IDE is started from sources, and DevKit plugin which adds required '--add-opens' options isn't enabled.

GitOrigin-RevId: 3650328389deb65ee1e82a529e15cf880a04bdc1